--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "@projectstorm/geometry": "^6.3.0",
+    "@projectstorm/react-canvas-core": "^6.3.0",
+    "@projectstorm/react-diagrams": "^6.0.1-beta.7",
+    "@projectstorm/react-diagrams-routing": "^6.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,9 +16,21 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "beautiful-react-diagrams": "^0.5.1",
+    "chart.js": "^3.0.0-beta.9",
+    "chartjs-chart-graph": "^3.0.0-beta.9",
+    "closest": "0.0.1",
+    "dagre": "^0.8.5",
+    "lodash": "^4.17.20",
+    "pathfinding": "^0.4.18",
+    "paths-js": "^0.4.11",
     "react": "^17.0.1",
+    "react-d3-tree": "^2.0.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-tree-graph": "^5.1.0",
+    "resize-observer-polyfill": "^1.5.1",
+    "storm-react-diagrams": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
